--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
-name = "project-template"
+name = "rust-pkcs11"
 version = "0.1.0"
 edition = "2021"
 authors = ["Daniel Duclos-Cavalcanti daniel.duclos.cavalcanti@gmail.com"]
-description = "This is a rust template project"
-repository = "https://github.com/duclos-cavalcanti/project-template"
+description = "This is a toy pkcs11 project"
+repository = "https://github.com/duclos-cavalcanti/rust-pkcs11"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
 tokio = { version = "1.42.0", features = ["full"] }
-# cryptoki = "0.12"
+
+# [build-dependencies]
