Base prototype of cpp vs rust conversation working

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -17,7 +17,7 @@ if(NOT PROTOBUF_FOUND)
 endif()
 
 set(PROTO_BIN   protobin)
-set(PROTO_FILES ${PROJECT_SOURCE_DIR}/proto/message.proto)
+set(PROTO_FILES ${PROJECT_SOURCE_DIR}/../proto/message.proto)
 
 PROTOBUF_GENERATE_CPP(
     PROTO_SRCS 
